--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,15 +7,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.7/chai.min.js" integrity="sha512-Pwgr3yHn4Gvztp1GKl0ihhAWLZfqgp4/SbMt4HKW7AymuTQODMCNPE7v1uGapTeOoQQ5Hoz367b4seKpx6j7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <link rel="stylesheet" href="/Users/andyprehn73/Taaffeite/assignment-unit-4.2/assignment/style.css">
     <!-- Create and link a CSS file! -->
 
   </head>
   <body>
-    <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
-    <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
-
-
+    <header>
+      <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+  <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
+    </header>
+<div>
+    <div class=info>
+    <h2> My name is Andy Prehn </h2>
+    </div>
+</div>
+<img src="Chevy Equinox.jpeg" alt="My current ride">
+<div>
+  <h3>
+    "I bought my Chevy Equinox in 2020 right after lockdown started. 
+    It seemed silly but it was a way to get my credit in a better place.
+    I choose this one because it has the space I need to haul around stuff 
+    like camping gear and sailing gear!"
+  </h3>
+</div>
 
     <!-- Used for automated testing -->
     <div id="mocha"></div>
